--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,19 +1,18 @@
-name: hetu_std
+name: example
 description: A sample command-line application.
 version: 1.0.0
 # repository: https://github.com/my_org/my_repo
+
+publish_to: none # Remove this line if you wish to publish to pub.dev
 
 environment:
   sdk: ^3.7.2
 
 # Add regular dependencies here.
 dependencies:
+  hetu_std:
+    path: ../
   hetu_script: ^0.4.2+1
-  dio: ^5.8.0+1
-  crypto: ^3.0.6
-  base32: ^2.1.3
-  path: ^1.9.1
-  # path: ^1.8.0
 
 dev_dependencies:
   lints: ^5.0.0
